<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="loading">Loading&#8230;</string>
    <string name="app_name">FoodMenu</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="txt_supp">Enter Supplier Name</string>
    <string name="txt_table">Table No.</string>
    <string name="txt_item_id">Item Id</string>
    <string name="txt_enter_item_id">Enter Item Id</string>
    <string name="txt_item_name">Item Name</string>
    <string name="txt_rate">Rate</string>
    <string name="txt_add_item">Add Item</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_item_list">Item List</string>
    <string name="txt_edit_item">Edit Item</string>
    <string name="txt_delete_item">Delete Item</string>
    <string name="txt_update_item">Update Item</string>
    <string name="txt_login">Login</string>
    <string name="txt_done">Done</string>
    <string name="txt_sno">S.No.</string>
    <string name="txt_particulars">Particulars</string>
    <string name="txt_total">Total</string>
    <string name="txt_gen_kot">Generate KOT</string>
</resources>