<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp" >
    <TextView
        android:id="@+id/tv1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_item_list"
        android:paddingBottom="5dp"
        android:textSize="30sp" />
    <LinearLayout
        android:id="@+id/ll"
        android:layout_below="@id/tv1"
        android:layout_width="400dp"
		android:layout_height="wrap_content"
        android:orientation="horizontal"
    	android:paddingBottom="5dp"
    	android:weightSum="100">
 		<TextView
	        android:layout_weight="40"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_item_id"
	        android:textSize="20sp"/>
        <TextView
	       	android:layout_weight="20"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_item_name"
	        android:textSize="20sp"/>
        <TextView
	        android:layout_weight="40"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_rate"
	        android:textSize="20sp"/>        
    </LinearLayout>
    <ScrollView
        android:layout_below="@id/ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginBottom="50dip"
        android:minHeight="200dip">
        <LinearLayout
        android:layout_width="400dp"
		android:layout_height="wrap_content"
        android:orientation="horizontal"
    	android:paddingBottom="5dp"
    	android:weightSum="100">
        <TextView
            android:id="@+id/tvSQLid"
	        android:layout_weight="40"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvSQLname"
	       	android:layout_weight="20"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvSQLrate"
	        android:layout_weight="40"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>        
    	</LinearLayout>
    
    </ScrollView>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <TextView	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_enter_item_id"/>
        <EditText		    
	        android:id="@+id/etSQLItemID"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:inputType="number"/>        
        <Button
            android:id="@+id/editButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/txt_edit_item"
            style="?android:attr/buttonStyleSmall"/>
        <Button
            android:id="@+id/deleteButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/txt_delete_item"
            style="?android:attr/buttonStyleSmall"/>
    </LinearLayout>    
</RelativeLayout>