<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_table" />
        <EditText
            android:id="@+id/etSQLTableName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>
    
	<LinearLayout
	    android:weightSum="100"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="5dp">
        <TextView
		    android:layout_weight="22"
	        android:id="@+id/tvSQLId"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
		<EditText
		    android:layout_weight="14"
	        android:id="@+id/etSQLItemName"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/txt_item_name"/>
		<EditText
		    android:layout_weight="20"
	        android:id="@+id/etSQLQuantity"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/txt_quantity"
	        android:inputType="number"/>
		<TextView
		    android:layout_weight="22"
	        android:id="@+id/tvSQLRate"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/txt_rate"/>
		<Button
		    android:id="@+id/bSQLAddItem"
		    android:layout_weight="22"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_add_item" />
    </LinearLayout>
    <!--<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical">
		<ListView
		    android:id="@+id/list1"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">	    
		</ListView>"
        
    </ScrollView>-->
    <LinearLayout
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
	    <ListView
		    android:id="@+id/list"
		    android:layout_width="200dp"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="50dp">	    
		</ListView>
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"		    
		    android:orientation="vertical">
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"		    
		    	android:orientation="horizontal"
		    	android:weightSum="100">
		        <TextView
				    android:layout_weight="22"			        
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/txt_sno"/>
		        <TextView
				    android:layout_weight="14"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/txt_particulars"/>
		        <TextView
				    android:layout_weight="22"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/txt_rate"/>
		        <TextView
				    android:layout_weight="22"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/txt_quantity"/>
		        <TextView
				    android:layout_weight="20"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/txt_total"/>
		    </LinearLayout>
		    <ScrollView
				android:layout_width="fill_parent"
				android:layout_height="200dp"
				android:scrollbars="vertical">
			    <LinearLayout
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"		    
			    	android:orientation="horizontal"
			    	android:weightSum="100">
			        <TextView
			            android:id="@+id/po1"
					    android:layout_weight="22"			        
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"/>
			        <TextView
			            android:id="@+id/po2"
					    android:layout_weight="14"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"/>
			        <TextView
			            android:id="@+id/po3"
					    android:layout_weight="22"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"/>
			        <TextView
			            android:id="@+id/po4"
					    android:layout_weight="22"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"/>
			        <TextView
			            android:id="@+id/po5"
					    android:layout_weight="20"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"/>
			    </LinearLayout>
		    </ScrollView>
		    <TextView
	            android:id="@+id/grandTotal"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="right"
			    android:layout_marginRight="80dp"
			    android:textSize="20sp"/>
		    <Button
			    android:id="@+id/bSQLGenKot"			    			    
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="right"
			    android:text="@string/txt_gen_kot" />
			</LinearLayout>
	
	</LinearLayout>
    
</LinearLayout>